fix: Increase spacing to handle larger time values

--- a/apps/app/src/react/styles/part.scss
+++ b/apps/app/src/react/styles/part.scss
@@ -320,7 +320,7 @@ $part_time_height: 16px;
 
 		&__remaining-time {
 			margin-left: auto;
-			margin-right: 88px;
+			margin-right: 100px;
 			position: relative;
 			top: 0px;
 			font-family: 'Barlow Condensed';
